objects/EinsteinResponseCard__c.object
<CustomObject>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EinsteinResponse__c</fullName>
        <label>Einstein Response</label>
        <referenceTo>EinsteinResponse__c</referenceTo>
        <relationshipName>EinsteinResponseCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Einstein Response Card</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Response Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>